--- a/templates/page_a.html
+++ b/templates/page_a.html
@@ -39,7 +39,7 @@
   <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 pt-1">
-        <a class="text-muted" href="#">Mini Web Service</a>
+        <a class="text-muted" href="#">Mini Web Servic : A Pagee</a>
       </div>
     </div>
   </header>
@@ -51,11 +51,11 @@
       <p class="lead mb-0"><a href="#" class="text-white">You could subscribe this page</a></p>
     </div>
 <br>
-<form>
-<form>
+<form action="/page/set_email" method="post">
   <div class="form-row">
     <div class="col">
-      <input type="email" class="form-control" placeholder="example@email.com">
+      <input type="email" class="form-control" name="user_email">
+      <input type="hidden" name="page_id" value="A">
     </div>
     <div class="col">
   <button type="submit" class="btn btn-primary">Subscribe</button>
@@ -63,7 +63,6 @@
   </div>
 </form>
 
-</form>
   </div>
 
 
