--- a/templates/page_b.html
+++ b/templates/page_b.html
@@ -39,7 +39,7 @@
   <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 pt-1">
-        <a class="text-muted" href="#">Mini Web Service</a>
+        <a class="text-muted" href="#">Mini Web Service : B Page</a>
       </div>
     </div>
   </header>
@@ -52,10 +52,11 @@
     </div>
 <br>
 <form>
-<form>
+<form action="/page/set_email" method="get">
   <div class="form-row">
     <div class="col">
-      <input type="email" class="form-control" placeholder="example@email.com">
+      <input type="email" class="form-control" name="example@email.com">
+      <input type="hidden" name="page_id" value="B">
     </div>
     <div class="col">
   <button type="submit" class="btn btn-primary">Subscribe</button>
