--- a/templates/page_a.html
+++ b/templates/page_a.html
@@ -39,7 +39,7 @@
   <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 pt-1">
-        <a class="text-muted" href="#">Mini Web Servic : A Pagee</a>
+        <a class="text-muted" href="#">Mini Web Servic : A Page</a>
       </div>
     </div>
   </header>
